--- a/mini-project-2/pom.xml
+++ b/mini-project-2/pom.xml
@@ -8,6 +8,8 @@
     <artifactId>mini-project-2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>library-management</name>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
