--- a/mini-project-2/pom.xml
+++ b/mini-project-2/pom.xml
@@ -15,11 +15,17 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-launcher</artifactId>
-            <version>1.10.2</version>
-            <scope>test</scope>
-        </dependency>
+	         <groupId>org.junit.jupiter</groupId>
+	         <artifactId>junit-jupiter-engine</artifactId>
+	         <version>5.2.0</version>
+	         <scope>test</scope>
+         </dependency>
+         <dependency>
+	         <groupId>org.junit.platform</groupId>
+	         <artifactId>junit-platform-runner</artifactId>
+	         <version>1.2.0</version>
+	         <scope>test</scope>
+         </dependency>
         <build>
             <plugins>
                 <plugin>
