--- a/mini-project-2/pom.xml
+++ b/mini-project-2/pom.xml
@@ -28,15 +28,24 @@
          </dependency>
         <build>
             <plugins>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.1.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>3.1.2</version>
-                </plugin>
-            </plugins>
+		<plugin>
+           		<groupId>org.apache.maven.plugins</groupId>
+           		<artifactId>maven-surefire-plugin</artifactId>
+           		<version>2.22.0</version>
+           		<dependencies>
+               			<dependency>
+                   			<groupId>org.junit.platform</groupId>
+                   			<artifactId>junit-platform-surefire-provider</artifactId>
+                   			<version>1.2.0</version>
+               			</dependency>
+           		</dependencies>
+           		<configuration>
+           		<additionalClasspathElements>
+           			<additionalClasspathElement>src/test/java/</additionalClasspathElement>
+           		</additionalClasspathElements>
+           		</configuration>
+      		 </plugin>
+	    </plugins>
         </build>
     </properties>
 
